// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ScanSourceList Component should handle multiple status messages: connect status 1`] = `
<Grid
  bsClass="container"
  componentClass="div"
  fluid={true}
>
  <Row
    bsClass="row"
    className="fadein"
    componentClass="div"
    key="1"
  >
    <Col
      bsClass="col"
      componentClass="div"
      md={3}
      xs={4}
    >
      <Icon
        name=""
        type="pf"
      />
        
      test
    </Col>
    <Col
      bsClass="col"
      componentClass="div"
      md={9}
      xs={8}
    >
      Connection Scan: ipsum
    </Col>
  </Row>
</Grid>
`;

exports[`ScanSourceList Component should handle multiple status messages: fallback status 1`] = `
<Grid
  bsClass="container"
  componentClass="div"
  fluid={true}
>
  <Row
    bsClass="row"
    className="fadein"
    componentClass="div"
    key="1"
  >
    <Col
      bsClass="col"
      componentClass="div"
      md={3}
      xs={4}
    >
      <Icon
        name=""
        type="pf"
      />
        
      test
    </Col>
    <Col
      bsClass="col"
      componentClass="div"
      md={9}
      xs={8}
    >
      Connection Scan: ipsum
    </Col>
  </Row>
</Grid>
`;

exports[`ScanSourceList Component should handle multiple status messages: inspect status 1`] = `
<Grid
  bsClass="container"
  componentClass="div"
  fluid={true}
>
  <Row
    bsClass="row"
    className="fadein"
    componentClass="div"
    key="1"
  >
    <Col
      bsClass="col"
      componentClass="div"
      md={3}
      xs={4}
    >
      <Icon
        name=""
        type="pf"
      />
        
      test
    </Col>
    <Col
      bsClass="col"
      componentClass="div"
      md={9}
      xs={8}
    >
      Inspection Scan: sit
    </Col>
  </Row>
</Grid>
`;

exports[`ScanSourceList Component should render a connected component: connected 1`] = `
<ScanSourceList
  error={false}
  errorMessage={null}
  getScanJob={[Function]}
  id={1}
  pending={false}
  scanJobList={Array []}
/>
`;

exports[`ScanSourceList Component should render a non-connected component error: error 1`] = `
<EmptyState
  className=""
>
  <EmptyStateIcon
    className=""
    name="error-circle-o"
    type="pf"
  />
  <EmptyStateTitle
    className=""
  >
    Error retrieving scan jobs
  </EmptyStateTitle>
  <EmptyStateInfo
    className=""
  >
    Lorem Ipsum.
  </EmptyStateInfo>
</EmptyState>
`;

exports[`ScanSourceList Component should render a non-connected component pending: pending 1`] = `
<EmptyState
  className=""
>
  <EmptyStateIcon
    className=""
    name="spinner spinner-xl"
    type="pf"
  />
  <EmptyStateTitle
    className=""
  >
    Loading scan jobs...
  </EmptyStateTitle>
</EmptyState>
`;

exports[`ScanSourceList Component should render a non-connected component: non-connected 1`] = `
<div
  class="container-fluid"
>
  <div
    class="fadein row"
  >
    <div
      class="col-md-3 col-xs-4"
    >
      <span
        aria-hidden="true"
        class="pficon pficon-"
      />
        test
    </div>
    <div
      class="col-md-9 col-xs-8"
    >
      Connection Scan: ipsum
    </div>
  </div>
</div>
`;
